# terraformer

./: .gitattributes  .gitignore  LICENSE  README.md  makefile  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yaml  isort.yaml  mypy.yaml  pypi.yaml  pytest.yaml  semver.yaml
docs/dev/: settings.md
terraformer/: _version.py  workspace.py
terraformer/conf/: settings.py
terrapy/: __init__.py  client.py  mixins.py  plan.py  workspace.py
terrapyst/: __init__.py  _version.py  apply_log.py  mixins.py  plan.py  workspace.py
tests/: conftest.py  test_apply_logs.py  test_plan.py  test_workspace.py
tests/terraform/applies/: vpc.jsonl
tests/terraform/destroys/: vpc.jsonl
tests/terraform/plans/: sensitive_plan.json  test.plan
tests/terraform/workspace/: main.tf  mock.tfbackend  test.auto.tfvars.json
tests/workspace/: main.tf
