[metadata]
name = terrapyst
description = A Python Wrapper around the Terraform CLI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = terrapyst/_version.py
versionfile_build = terrapyst/_version.py
tag_prefix = v

parentdir_prefix =

[options]
packages = find:
include-package-data = True
install_requires =

[options.package_data]
terrapyst = py.typed

[options.extras_require]
dev =
  black
  build
  glom
  isort
  mypy
  pytest
  pytest-cov


