[metadata]
name = terraformer
description = A python library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = terraformer/_version.py
versionfile_build = terraformer/_version.py
tag_prefix = v

parentdir_prefix =

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
  pydantic

[options.extras_require]
dev =
  black
  build
  dapperdata
  glom
  isort
  mypy
  pip-tools
  pytest
  pytest-cov
  pytest-pretty
  ruamel.yaml

[options.package_data]
terraformer = py.typed


